--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,10 +25,11 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --onefile translate_ppt.py
+        pyinstaller --onefile --name pptx_translator translate_ppt_gui.py
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
         name: pptx_translator_exe
-        path: dist/translate_ppt.exe
+        path: dist/pptx_translator.exe
+
